// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoutePicker renders a list of routes 1`] = `
<div
  className="m-picker-container  visible"
>
  <div
    className="m-picker-container__tab"
  >
    <button
      className="m-picker-container__tab-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-route-picker"
  >
    <ul
      className="m-route-picker__selected-routes"
    >
      <li>
        <button
          className="m-route-picker__selected-routes-button"
          onClick={[Function]}
        >
          28
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__selected-routes-button"
          onClick={[Function]}
        >
          39
        </button>
      </li>
    </ul>
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
          onClick={[Function]}
        >
          28
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
          onClick={[Function]}
        >
          39
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          71
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          73
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          111
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`RoutePicker renders a loading/empty state 1`] = `
<div
  className="m-picker-container  visible"
>
  <div
    className="m-picker-container__tab"
  >
    <button
      className="m-picker-container__tab-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-route-picker"
  >
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    loading...
  </div>
</div>
`;
